# libnewchain

./: .gitignore  CMakeLists.txt  Makefile  README.md  highlevel.c  highlevel.h  keystore.c  keystore.h  libnewchain.ex  libnewchain.h  libnewchain_ex.c  main.c  misc.c  misc.h  newchain.c  newchain.h  portable_utils.c  portable_utils.h
jsmn/: jsmn.c
tiny-aes-c/: tinyaes.c  tinyaes.h
